fix seller add product overflow

--- a/src/pages/seller-add-product/seller-add-product.css
+++ b/src/pages/seller-add-product/seller-add-product.css
@@ -55,12 +55,11 @@ main > form > section > ul > li > input[type=checkbox]:checked+label {
 
 main > form > section > ul > li > input {
     /* hidden, but visible for screen readers category name */
-    clip: rect(1px 1px 1px 1px);
-    height: 1px;
-    width: 1px;
+    clip: rect(0 0 0 0);
+    height: 0;
+    width: 0;
     margin: -1px;
     overflow: hidden;
-    position: absolute;
 }
 
 main > form > section:nth-of-type(2) {
